translation-tool/inputs/source_meta/objects/HnsSiteAccountTranss__x.object
<CustomObject>
    <description>HnsSiteAccountTranss</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsSiteAccountTranss</externalName>
    <fields>
        <fullName>BO_ID_SITE__c</fullName>
        <description>BO_ID_SITE</description>
        <externalDeveloperName>BO_ID_SITE</externalDeveloperName>
        <label>Site BO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>BUSINESS_UNIT</description>
        <externalDeveloperName>BUSINESS_UNIT</externalDeveloperName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>END_DT__c</fullName>
        <description>END_DT</description>
        <externalDeveloperName>END_DT</externalDeveloperName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_DTTM__c</fullName>
        <description>ROW_ADDED_DTTM</description>
        <externalDeveloperName>ROW_ADDED_DTTM</externalDeveloperName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_DT__c</fullName>
        <description>START_DT</description>
        <externalDeveloperName>START_DT</externalDeveloperName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZACCTRANCD__c</fullName>
        <description>ZACCTRANCD</description>
        <externalDeveloperName>ZACCTRANCD</externalDeveloperName>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZACCTTRAN_DESC__c</fullName>
        <description>ZACCTTRAN_DESC</description>
        <externalDeveloperName>ZACCTTRAN_DESC</externalDeveloperName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTRANSVALUE__c</fullName>
        <description>ZTRANSVALUE</description>
        <externalDeveloperName>ZTRANSVALUE</externalDeveloperName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANSTAT__c</fullName>
        <description>Z_TRANSTAT</description>
        <externalDeveloperName>Z_TRANSTAT</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANS_DTTM__c</fullName>
        <description>Z_TRANS_DTTM</description>
        <externalDeveloperName>Z_TRANS_DTTM</externalDeveloperName>
        <label>Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsSiteAccountTranss</label>
    <pluralLabel>HnsSiteAccountTranss</pluralLabel>
</CustomObject>